# SourceDEFUN

./: .gitignore  CMakeLists.txt  README.md  SourceDEFUN.sln  create_solution.cmd  modProps.props
.github/workflows/: compile.yml  msbuild.yml  shader.yml
common/: language.cpp
configs/: activities.json
dx10sdk/utilities/dx9_30/: readme.md
game/client/: CMakeLists.txt  c_physicsprop.cpp  clientshadowmgr.cpp  panelmetaclassmgr.cpp  particlemgr.h  swarm_sdk_client.vcproj  swarm_skeleton_client.vcxproj
game/server/: CMakeLists.txt  EntityFlame.cpp  ai_activity.cpp  physics_main.cpp  swarm_skeleton_server.vcxproj  wcedit.cpp
game/shared/: movevars_shared.cpp
lib/public/: shaderlib.lib
materialsystem/shaderlib/: CMakeLists.txt  shaderlib_swarm.vcxproj
materialsystem/swarmshaders/: CMakeLists.txt  buildshaders.bat  commandbuilder.h  deferred_shaders.txt  game_shader_generic_swarm.sln  game_shader_generic_swarm.vcxproj  game_shader_generic_swarm.vcxproj.filters  makefile.deferred_shaders  makefile.deferred_shaders_short  pbr_common_ps2_3_x.h  pbr_dx9.cpp
materialsystem/swarmshaders/include/: GITHUB
public/: bspfile.h  shaderlib.lib  stdint.h
public/tier0/: logging.h  platform.h  wchartypes.h
public/tier1/: UtlSortVector.h  convar.h  lerp_functions.h  strtools.h
