project(swarm_skeleton_client)

# source files
set(SOURCE_FILES
  ../../common/language.cpp
  ../shared/deferred/CDefLight.cpp
  ../shared/deferred/CDefLightContainer.cpp
  ../shared/deferred/CDefLightGlobal.cpp
  ../shared/deferred/deferred_shared_common.cpp
  ../shared/predicted_viewmodel.cpp
  ../shared/sdk/sdk_fx_shared.cpp
  ../shared/sdk/sdk_gamemovement.cpp
  ../shared/sdk/sdk_gamerules.cpp
  ../shared/sdk/sdk_playeranimstate.cpp
  ../shared/sdk/sdk_player_shared.cpp
  ../shared/sdk/sdk_usermessages.cpp
  ../shared/sdk/sdk_weapon_parse.cpp
  ../shared/sdk/weapon_mp5.cpp
  ../shared/sdk/weapon_pistol.cpp
  ../shared/sdk/weapon_sdkbase.cpp
  achievement_notification_panel.cpp
  ../shared/achievement_saverestore.cpp
  ../shared/achievementmgr.cpp
  ../shared/activitylist.cpp
  ../shared/ai_criteria.cpp
  ../shared/ai_responsesystem.cpp
  ../shared/ai_speechconcept.cpp
  ../shared/ammodef.cpp
  animatedentitytextureproxy.cpp
  animatedoffsettextureproxy.cpp
  animatedtextureproxy.cpp
  AnimateSpecificTextureProxy.cpp
  ../shared/animation.cpp
  ../shared/base_playeranimstate.cpp
  ../shared/baseachievement.cpp
  baseanimatedtextureproxy.cpp
  baseclientrendertargets.cpp
  ../shared/basecombatcharacter_shared.cpp
  ../shared/basecombatweapon_shared.cpp
  ../shared/baseentity_shared.cpp
  ../shared/basegrenade_shared.cpp
  ../shared/baseparticleentity.cpp
  ../shared/baseplayer_shared.cpp
  ../shared/baseviewmodel_shared.cpp
  ../shared/beam_shared.cpp
  beamdraw.cpp
  ../../common/blackbox_helper.cpp
  ../../public/bone_accessor.cpp
  bone_merge_cache.cpp
  c_ai_basehumanoid.cpp
  c_ai_basenpc.cpp
  c_baseanimating.cpp
  c_baseanimatingoverlay.cpp
  c_basecombatcharacter.cpp
  c_basecombatweapon.cpp
  c_basedoor.cpp
  c_baseentity.cpp
  c_baseflex.cpp
  c_baselesson.cpp
  c_baseplayer.cpp
  c_basetoggle.cpp
  c_baseviewmodel.cpp
  c_beamspotlight.cpp
  c_breakableprop.cpp
  c_colorcorrection.cpp
  c_colorcorrectionvolume.cpp
  c_dynamiclight.cpp
  c_entitydissolve.cpp
  c_entityflame.cpp
  c_entityfreezing.cpp
  c_entityparticletrail.cpp
  c_env_ambient_light.cpp
  c_env_dof_controller.cpp
  c_env_fog_controller.cpp
  c_env_global_light.cpp
  c_env_particlescript.cpp
  c_env_projectedtexture.cpp
  c_env_screenoverlay.cpp
  c_env_tonemap_controller.cpp
  c_fire_smoke.cpp
  c_fish.cpp
  c_func_areaportalwindow.cpp
  c_func_breakablesurf.cpp
  c_func_brush.cpp
  c_func_conveyor.cpp
  c_func_dust.cpp
  c_func_lod.cpp
  deferred/cascade_t.cpp
  deferred/cdeferred_manager_client.cpp
  deferred/clight_editor.cpp
  deferred/clight_manager.cpp
  deferred/DefCookieProjectable.cpp
  deferred/DefCookieTexture.cpp
  deferred/deferred_client_common.cpp
  deferred/deferred_rt.cpp
  deferred/def_light_t.cpp
  deferred/flashlighteffect_deferred.cpp
  deferred/IDeferredExtClient.cpp
  deferred/materialsystem_passthru.cpp
  deferred/vgui/projectable_factory.cpp
  deferred/vgui/vgui_editor_controls.cpp
  deferred/vgui/vgui_editor_props.cpp
  deferred/vgui/vgui_editor_root.cpp
  deferred/vgui/vgui_marquee.cpp
  deferred/vgui/vgui_particles.cpp
  deferred/vgui/vgui_projectable.cpp
  deferred/viewrender_deferred.cpp
  hl2/C_Func_Monitor.cpp
  c_func_movelinear.cpp
  c_func_occluder.cpp
  c_func_reflective_glass.cpp
  c_func_rotating.cpp
  c_func_smokevolume.cpp
  c_func_tracktrain.cpp
  c_gameinstructor.cpp
  c_gib.cpp
  c_hairball.cpp
  c_info_overlay_accessor.cpp
  c_lightglow.cpp
  C_MaterialModifyControl.cpp
  c_movie_display.cpp
  c_particle_system.cpp
  c_physbox.cpp
  c_physics_prop_statue.cpp
  c_physicsprop.cpp
  c_physmagnet.cpp
  c_pixel_visibility.cpp
  c_plasma.cpp
  c_playerresource.cpp
  c_point_camera.cpp
  c_point_commentary_node.cpp
  c_postprocesscontroller.cpp
  c_prop_hallucination.cpp
  c_props.cpp
  c_ragdoll_manager.cpp
  c_rope.cpp
  c_rumble.cpp
  c_sceneentity.cpp
  c_shadowcontrol.cpp
  c_slideshow_display.cpp
  c_soundscape.cpp
  c_spatialentity.cpp
  c_spotlight_end.cpp
  c_sprite.cpp
  c_sprite_perfmonitor.cpp
  c_sun.cpp
  c_sunlightshadowcontrol.cpp
  c_surfacerender.cpp
  c_team.cpp
  c_tesla.cpp
  c_test_proxytoggle.cpp
  c_triggers.cpp
  c_user_message_register.cpp
  c_vehicle_choreo_generic.cpp
  c_vehicle_jeep.cpp
  c_vguiscreen.cpp
  hl2/c_waterbullet.cpp
  C_WaterLODControl.cpp
  c_world.cpp
  camomaterialproxy.cpp
  cdll_bounded_cvars.cpp
  cdll_client_int.cpp
  cdll_util.cpp
  cl_mat_stub.cpp
  classmap.cpp
  ../../public/client_class.cpp
  client_factorylist.cpp
  client_thinklist.cpp
  clientalphaproperty.cpp
  cliententitylist.cpp
  clientleafsystem.cpp
  clientmode_shared.cpp
  clientshadowmgr.cpp
  clientsideeffects.cpp
  clientsideeffects_test.cpp
  ../../public/closedcaptions.cpp
  ../shared/collisionproperty.cpp
  ../../public/collisionutils.cpp
  colorcorrectionmgr.cpp
  commentary_modelviewer.cpp
  ../../common/compiledcaptionswap.cpp
  convarproxy.cpp
  ../../public/crtmemdebug.cpp
  cycleproxy.cpp
  ../shared/death_pose.cpp
  ../../common/debug_dll_check.cpp
  ../shared/debugoverlay_shared.cpp
  ../shared/decals.cpp
  detailobjectsystem.cpp
  ../../public/dt_recv.cpp
  ../../public/dt_utlvector_common.cpp
  ../../public/dt_utlvector_recv.cpp
  dummyproxy.cpp
  ../shared/effect_dispatch_data.cpp
  EffectsClient.cpp
  ../shared/ehandle.cpp
  ../shared/entitylist_base.cpp
  entityoriginmaterialproxy.cpp
  ../shared/EntityParticleTrail_Shared.cpp
  ../shared/env_detail_controller.cpp
  ../shared/env_wind_shared.cpp
  ../shared/eventlist.cpp
  ../../public/filesystem_helpers.cpp
  flashlighteffect.cpp
  foundryhelpers_client.cpp
  ../shared/func_ladder.cpp
  functionproxy.cpp
  fx_blood.cpp
  fx_cube.cpp
  fx_explosion.cpp
  fx_fleck.cpp
  fx_impact.cpp
  fx_interpvalue.cpp
  fx_quad.cpp
  fx_shelleject.cpp
  fx_staticline.cpp
  fx_tracer.cpp
  fx_trail.cpp
  fx_water.cpp
  ../shared/game_timescale_shared.cpp
  ../shared/gamemovement.cpp
  ../shared/gamerules.cpp
  ../shared/gamerules_register.cpp
  ../shared/GameStats.cpp
  ../shared/gamestringpool.cpp
  gametrace_client.cpp
  ../shared/gamevars_shared.cpp
  glow_outline_effect.cpp
  glow_overlay.cpp
  ../shared/hintmessage.cpp
  ../shared/hintsystem.cpp
  history_resource.cpp
  hltvcamera.cpp
  hud.cpp
  hud_basechat.cpp
  hud_basetimer.cpp
  hud_bitmapnumericdisplay.cpp
  hud_closecaption.cpp
  hud_crosshair.cpp
  hud_element_helper.cpp
  hud_lcd.cpp
  hud_locator_target.cpp
  hud_msg.cpp
  hud_numericdisplay.cpp
  hud_pdump.cpp
  hud_redraw.cpp
  ../shared/igamesystem.cpp
  hud_weapon.cpp
  in_camera.cpp
  in_joystick.cpp
  in_main.cpp
  in_mouse.cpp
  in_trackir.cpp
  initializer.cpp
  ../../public/tier1/interpolatedvar.cpp
  ../../public/interpolatortypes.cpp
  IsNPCProxy.cpp
  ../../public/jigglebones.cpp
  lampbeamproxy.cpp
  lamphaloproxy.cpp
  ../shared/mapentities_shared.cpp
  materialproxydict.cpp
  mathproxy.cpp
  matrixproxy.cpp
  ../../public/tier0/memoverride.cpp
  menu.cpp
  message.cpp
  modelrendersystem.cpp
  movehelper_client.cpp
  ../shared/movevars_shared.cpp
  ../shared/mp_shareddefs.cpp
  ../shared/multiplay_gamerules.cpp
  ../../public/networkvar.cpp
  object_motion_blur_effect.cpp
  ../shared/obstacle_pushaway.cpp
  panelmetaclassmgr.cpp
  particle_collision.cpp
  particle_litsmokeemitter.cpp
  ../shared/particle_parse.cpp
  ../shared/particle_property.cpp
  particle_proxies.cpp
  particle_simple3d.cpp
  particlemgr.cpp
  particles_attractor.cpp
  particles_ez.cpp
  particles_localspace.cpp
  particles_new.cpp
  particles_simple.cpp
  ../shared/particlesystemquery.cpp
  perfvisualbenchmark.cpp
  ../../public/phonemeconverter.cpp
  physics.cpp
  physics_main_client.cpp
  ../shared/physics_main_shared.cpp
  ../shared/physics_saverestore.cpp
  ../shared/physics_shared.cpp
  physpropclientside.cpp
  playerandobjectenumerator.cpp
  ../shared/point_bonusmaps_accessor.cpp
  ../shared/point_posecontroller.cpp
  ../../public/posedebugger.cpp
  ../shared/precache_register.cpp
  ../shared/predictableid.cpp
  prediction.cpp
  ../shared/predictioncopy.cpp
  ../shared/predictioncopy_helpers.cpp
  ../shared/predictioncopy_test.cpp
  ../shared/props_shared.cpp
  proxyentity.cpp
  ProxyHealth.cpp
  proxyplayer.cpp
  proxypupil.cpp
  ragdoll.cpp
  ../shared/ragdoll_shared.cpp
  ../../common/randoverride.cpp
  recvproxy.cpp
  rendertexture.cpp
  replaycamera.cpp
  ../shared/rope_helpers.cpp
  ../../public/rope_physics.cpp
  ../shared/saverestore.cpp
  ../shared/sceneentity_shared.cpp
  ../../public/scratchpad3d.cpp
  ../../public/ScratchPadUtils.cpp
  ScreenSpaceEffects.cpp
  ../../public/sentence.cpp
  ../shared/sequence_Transitioner.cpp
  ../shared/sheetsimulator.cpp
  ShaderEditor/SEdit_ModelRender.cpp
  ShaderEditor/ShaderEditorSystem.cpp
  sdk/clientmode_sdk.cpp
  sdk/c_sdk_jukebox.cpp
  sdk/c_sdk_lesson.cpp
  sdk/c_sdk_player.cpp
  sdk/gameui/backgroundmenubutton.cpp
  sdk/gameui/basesavegamedialog.cpp
  sdk/gameui/bitmapimagepanel.cpp
  sdk/gameui/commandcheckbutton.cpp
  sdk/gameui/contentcontroldialog.cpp
  sdk/gameui/createmultiplayergamebotpage.cpp
  sdk/gameui/createmultiplayergamedialog.cpp
  sdk/gameui/createmultiplayergamegameplaypage.cpp
  sdk/gameui/createmultiplayergameserverpage.cpp
  sdk/gameui/customtabexplanationdialog.cpp
  sdk/gameui/cvarnegatecheckbutton.cpp
  sdk/gameui/cvarslider.cpp
  sdk/gameui/cvartextentry.cpp
  sdk/gameui/cvartogglecheckbutton.cpp
  sdk/gameui/gameconsole.cpp
  sdk/gameui/gameconsoledialog.cpp
  sdk/gameui/gameui_interface.cpp
  sdk/gameui/gameui_util.cpp
  sdk/gameui/keytogglecheckbutton.cpp
  sdk/gameui/labeledcommandcombobox.cpp
  sdk/gameui/loadingdialog.cpp
  sdk/gameui/loadingtippanel.cpp
  sdk/gameui/logofile.cpp
  sdk/gameui/modinfo.cpp
  sdk/gameui/mousemessageforwardingpanel.cpp
  sdk/gameui/multiplayeradvanceddialog.cpp
  sdk/gameui/optionsdialog.cpp
  sdk/gameui/optionssubaudio.cpp
  sdk/gameui/optionssubdifficulty.cpp
  sdk/gameui/optionssubgame.cpp
  sdk/gameui/optionssubkeyboard.cpp
  sdk/gameui/optionssubmouse.cpp
  sdk/gameui/optionssubmultiplayer.cpp
  sdk/gameui/optionssubportal.cpp
  sdk/gameui/optionssubvideo.cpp
  sdk/gameui/optionssubvoice.cpp
  sdk/gameui/panellistpanel.cpp
  sdk/gameui/playerlistdialog.cpp
  sdk/gameui/rungameengine.cpp
  sdk/gameui/scriptobject.cpp
  sdk/gameui/sdk/basemodframe.cpp
  sdk/gameui/sdk/basemodpanel.cpp
  sdk/gameui/sdk/gamemodes.cpp
  sdk/gameui/sdk/uiavatarimage.cpp
  sdk/gameui/sdk/uigamedata.cpp
  sdk/gameui/sdk/uigamedata_invite.cpp
  sdk/gameui/sdk/uigamedata_storage.cpp
  sdk/gameui/sdk/vachievements.cpp
  sdk/gameui/sdk/vaddonassociation.cpp
  sdk/gameui/sdk/vaddons.cpp
  sdk/gameui/sdk/vattractscreen.cpp
  sdk/gameui/sdk/vaudio.cpp
  sdk/gameui/sdk/vaudiovideo.cpp
  sdk/gameui/sdk/vcloud.cpp
  sdk/gameui/sdk/vcontrolleroptions.cpp
  sdk/gameui/sdk/vcontrolleroptionsbuttons.cpp
  sdk/gameui/sdk/vcontrolleroptionssticks.cpp
  sdk/gameui/sdk/vcustomcampaigns.cpp
  sdk/gameui/sdk/vdownloadcampaign.cpp
  sdk/gameui/sdk/vdownloads.cpp
  sdk/gameui/sdk/vdropdownmenu.cpp
  sdk/gameui/sdk/vflyoutmenu.cpp
  sdk/gameui/sdk/vfooterpanel.cpp
  sdk/gameui/sdk/vfoundgames.cpp
  sdk/gameui/sdk/vfoundgroupgames.cpp
  sdk/gameui/sdk/vfoundpublicgames.cpp
  sdk/gameui/sdk/vgamelobby.cpp
  sdk/gameui/sdk/vgamelobbychat.cpp
  sdk/gameui/sdk/vgameoptions.cpp
  sdk/gameui/sdk/vgamesettings.cpp
  sdk/gameui/sdk/vgenericconfirmation.cpp
  sdk/gameui/sdk/vgenericpanellist.cpp
  sdk/gameui/sdk/vgenericwaitscreen.cpp
  sdk/gameui/sdk/vgetlegacydata.cpp
  sdk/gameui/sdk/vhybridbutton.cpp
  sdk/gameui/sdk/vingamechapterselect.cpp
  sdk/gameui/sdk/vingamedifficultyselect.cpp
  sdk/gameui/sdk/vingamekickplayerlist.cpp
  sdk/gameui/sdk/vingamemainmenu.cpp
  sdk/gameui/sdk/vjukebox.cpp
  sdk/gameui/sdk/vkeyboard.cpp
  sdk/gameui/sdk/vkeyboardmouse.cpp
  sdk/gameui/sdk/vleaderboard.cpp
  sdk/gameui/sdk/vloadingprogress.cpp
  sdk/gameui/sdk/vmainmenu.cpp
  sdk/gameui/sdk/vmenubackground.cpp
  sdk/gameui/sdk/vmultiplayer.cpp
  sdk/gameui/sdk/voptions.cpp
  sdk/gameui/sdk/vpasswordentry.cpp
  sdk/gameui/sdk/vquickjoin.cpp
  sdk/gameui/sdk/vquickjoingroups.cpp
  sdk/gameui/sdk/vsignindialog.cpp
  sdk/gameui/sdk/vslidercontrol.cpp
  sdk/gameui/sdk/vspinnercontrol.cpp
  sdk/gameui/sdk/vsteamcloudconfirmation.cpp
  sdk/gameui/sdk/vtransitionscreen.cpp
  sdk/gameui/sdk/vvideo.cpp
  sdk/gameui/sdk/vvoteoptions.cpp
  sdk/gameui/sys_utils.cpp
  sdk/gameui/textentrybox.cpp
  sdk/gameui/urlbutton.cpp
  sdk/gameui/vcontrolslistpanel.cpp
  sdk/gameui/vguisystemmoduleloader.cpp
  sdk/sdk_fx_impacts.cpp
  sdk/sdk_fx_tracers.cpp
  sdk/sdk_fx_weaponfx.cpp
  sdk/sdk_input.cpp
  sdk/sdk_prediction.cpp
  sdk/vgui/nb_button.cpp
  sdk/vgui/nb_header_footer.cpp
  sdk/vgui/nb_horiz_list.cpp
  sdk/vgui/nb_select_level_entry.cpp
  sdk/vgui/nb_select_level_panel.cpp
  sdk/vgui/sdk_hud_ammo.cpp
  sdk/vgui/sdk_hud_chat.cpp
  sdk/vgui/sdk_hud_health.cpp
  sdk/vgui/sdk_hud_weaponselection.cpp
  sdk/vgui/sdk_loading_panel.cpp
  sdk/vgui/sdk_logo_panel.cpp
  sdk/vgui/sdk_vgui_music_importer.cpp
  sdk/vgui_rootpanel_sdk.cpp
  simple_keys.cpp
  ../../public/simple_physics.cpp
  ../shared/simtimer.cpp
  ../shared/singleplay_gamerules.cpp
  ../shared/SoundEmitterSystem.cpp
  ../shared/soundenvelope.cpp
  ../../public/SoundParametersInternal.cpp
  spatialentitymgr.cpp
  splinepatch.cpp
  ../shared/Sprite.cpp
  spritemodel.cpp
  ../shared/SpriteTrail.cpp
  ../shared/steamworks_gamestats.cpp
  ../../public/stringregistry.cpp
  ../../public/studio.cpp
  ../shared/studio_shared.cpp
  ../shared/takedamageinfo.cpp
  ../shared/teamplay_gamerules.cpp
  ../shared/teamplayroundbased_gamerules.cpp
  ../shared/test_ehandle.cpp
  text_message.cpp
  texturescrollmaterialproxy.cpp
  timematerialproxy.cpp
  toggletextureproxy.cpp
  ../shared/usercmd.cpp
  ../shared/usermessages.cpp
  ../shared/util_shared.cpp
  ../../public/vallocator.cpp
  ../shared/vehicle_viewblend_shared.cpp
  vgui_avatarimage.cpp
  vgui_basepanel.cpp
  vgui_bindpanel.cpp
  vgui_bitmapbutton.cpp
  vgui_bitmapimage.cpp
  vgui_bitmappanel.cpp
  vgui_centerstringpanel.cpp
  vgui_consolepanel.cpp
  ../../public/vgui_controls/vgui_controls.cpp
  vgui_debugoverlaypanel.cpp
  vgui_fpspanel.cpp
  vgui_game_viewport.cpp
  vgui_grid.cpp
  vgui_hudvideo.cpp
  vgui_int.cpp
  vgui_loadingdiscpanel.cpp
  vgui_messagechars.cpp
  vgui_movie_display.cpp
  vgui_netgraphpanel.cpp
  vgui_slideshow_display_screen.cpp
  vgui_video.cpp
  view.cpp
  view_beams.cpp
  view_effects.cpp
  view_scene.cpp
  viewangleanim.cpp
  ViewConeImage.cpp
  viewdebug.cpp
  viewpostprocess.cpp
  viewrender.cpp
  ../shared/voice_banmgr.cpp
  voice_menu.cpp
  ../shared/voice_status.cpp
  vscript_client.cpp
  ../shared/vscript_shared.cpp
  warp_overlay.cpp
  WaterLODMaterialProxy.cpp
  ../shared/weapon_parse.cpp
  weapon_selection.cpp
  weapons_resource.cpp
  WorldDimsProxy.cpp
  stdafx.cpp
  c_basetempentity.cpp
  c_effects.cpp
  c_impact_effects.cpp
  c_movie_explosion.cpp
  c_particle_fire.cpp
  c_particle_smokegrenade.cpp
  c_prop_vehicle.cpp
  c_recipientfilter.cpp
  c_smoke_trail.cpp
  c_smokestack.cpp
  c_steamjet.cpp
  c_stickybolt.cpp
  c_te.cpp
  c_te_armorricochet.cpp
  c_te_basebeam.cpp
  c_te_beamentpoint.cpp
  c_te_beaments.cpp
  c_te_beamfollow.cpp
  c_te_beamlaser.cpp
  c_te_beampoints.cpp
  c_te_beamring.cpp
  c_te_beamringpoint.cpp
  c_te_beamspline.cpp
  c_te_bloodsprite.cpp
  c_te_bloodstream.cpp
  c_te_breakmodel.cpp
  c_te_bspdecal.cpp
  c_te_bubbles.cpp
  c_te_bubbletrail.cpp
  c_te_clientprojectile.cpp
  c_te_decal.cpp
  c_te_dynamiclight.cpp
  c_te_effect_dispatch.cpp
  c_te_energysplash.cpp
  c_te_explosion.cpp
  c_te_fizz.cpp
  c_te_footprint.cpp
  c_te_glassshatter.cpp
  c_te_glowsprite.cpp
  c_te_impact.cpp
  c_te_killplayerattachments.cpp
  c_te_largefunnel.cpp
  c_te_legacytempents.cpp
  c_te_muzzleflash.cpp
  c_te_particlesystem.cpp
  c_te_physicsprop.cpp
  c_te_playerdecal.cpp
  c_te_projecteddecal.cpp
  c_te_showline.cpp
  c_te_smoke.cpp
  c_te_sparks.cpp
  c_te_sprite.cpp
  c_te_spritespray.cpp
  c_te_worlddecal.cpp
  c_testtraceline.cpp
  c_tracer.cpp
  fx.cpp
  fx_discreetline.cpp
  fx_envelope.cpp
  fx_line.cpp
  fx_sparks.cpp
  particlesphererenderer.cpp
  smoke_fog_overlay.cpp
  game_controls/basemodel_panel.cpp
  game_controls/baseviewport.cpp
  game_controls/ClientScoreBoardDialog.cpp
  game_controls/commandmenu.cpp
  game_controls/IconPanel.cpp
  game_controls/intromenu.cpp
  game_controls/MapOverview.cpp
  game_controls/NavProgress.cpp
  game_controls/SpectatorGUI.cpp
  game_controls/teammenu.cpp
  game_controls/vguitextwindow.cpp
  hl2/c_antlion_dust.cpp
  hl2/c_ar2_explosion.cpp
  hl2/c_basehelicopter.cpp
  hl2/c_npc_combinegunship.cpp
  hl2/c_rotorwash.cpp
  mp3player.cpp
  ../../public/tools/bonelist.cpp
  entity_client_tools.cpp
  toolframework_client.cpp
)

# header files
set(HEADER_FILES
  ../../materialsystem/swarmshaders/deferred_global_common.h
  ../../materialsystem/swarmshaders/IDeferredExt.h
  ../shared/deferred/CDefLight.h
  ../shared/deferred/CDefLightContainer.h
  ../shared/deferred/CDefLightGlobal.h
  ../shared/deferred/deferred_shared_common.h
  ../shared/predicted_viewmodel.h
  ../shared/sdk/sdk_fx_shared.h
  ../shared/sdk/sdk_gamerules.h
  ../shared/sdk/sdk_movedata.h
  ../shared/sdk/sdk_playeranimstate.h
  ../shared/sdk/sdk_player_shared.h
  ../shared/sdk/sdk_weapon_parse.h
  ../shared/sdk/weapon_sdkbase.h
  achievement_notification_panel.h
  ../shared/achievement_saverestore.h
  ../shared/achievementmgr.h
  ../shared/ai_criteria.h
  ../shared/ai_responsesystem.h
  ../shared/ai_speechconcept.h
  ../shared/baseachievement.h
  ../../common/blackbox_helper.h
  c_baselesson.h
  c_basetoggle.h
  c_colorcorrection.h
  c_env_ambient_light.h
  c_env_projectedtexture.h
  c_gameinstructor.h
  c_physics_prop_statue.h
  c_postprocesscontroller.h
  c_props.h
  c_slideshow_display.h
  c_spatialentity.h
  cdll_bounded_cvars.h
  commentary_modelviewer.h
  deferred/cascade_t.h
  deferred/cdeferred_manager_client.h
  deferred/clight_editor.h
  deferred/clight_manager.h
  deferred/DefCookieProjectable.h
  deferred/DefCookieTexture.h
  deferred/deferred_client_common.h
  deferred/deferred_rt.h
  deferred/def_light_t.h
  deferred/flashlighteffect_deferred.h
  deferred/IDefCookie.h
  deferred/materialsystem_passthru.h
  deferred/vgui/projectable_factory.h
  deferred/vgui/vgui_deferred.h
  deferred/vgui/vgui_editor_controls.h
  deferred/vgui/vgui_editor_props.h
  deferred/vgui/vgui_marquee.h
  deferred/vgui/vgui_particles.h
  deferred/vgui/vgui_projectable.h
  deferred/viewrender_deferred.h
  foundryhelpers_client.h
  ../shared/game_timescale_shared.h
  hud_locator_target.h
  ../../engine/iblackbox.h
  modelrendersystem.h
  ../shared/particle_parse.h
  ../shared/particle_property.h
  ../shared/point_bonusmaps_accessor.h
  ../shared/postprocess_shared.h
  ../shared/sharedvar.h
  ShaderEditor/ISEdit_ModelRender.h
  ShaderEditor/IVShaderEditor.h
  ShaderEditor/SEdit_ModelRender.h
  ShaderEditor/ShaderEditorSystem.h
  sdk/clientmode_sdk.h
  sdk/c_sdk_jukebox.h
  sdk/c_sdk_player.h
  sdk/gameui/backgroundmenubutton.h
  sdk/gameui/basepanel.h
  sdk/gameui/basesavegamedialog.h
  sdk/gameui/bitmapimagepanel.h
  sdk/gameui/cdkeyentrydialog.h
  sdk/gameui/commandcheckbutton.h
  sdk/gameui/contentcontroldialog.h
  sdk/gameui/createmultiplayergamebotpage.h
  sdk/gameui/createmultiplayergamedialog.h
  sdk/gameui/createmultiplayergamegameplaypage.h
  sdk/gameui/createmultiplayergameserverpage.h
  sdk/gameui/customtabexplanationdialog.h
  sdk/gameui/cvarnegatecheckbutton.h
  sdk/gameui/cvarslider.h
  sdk/gameui/cvartextentry.h
  sdk/gameui/cvartogglecheckbutton.h
  sdk/gameui/engineinterface.h
  sdk/gameui/gameconsole.h
  sdk/gameui/gameconsoledialog.h
  sdk/gameui/gameui_interface.h
  sdk/gameui/gameui_util.h
  sdk/gameui/keytogglecheckbutton.h
  sdk/gameui/labeledcommandcombobox.h
  sdk/gameui/loadingdialog.h
  sdk/gameui/loadingtippanel.h
  sdk/gameui/modinfo.h
  sdk/gameui/mousemessageforwardingpanel.h
  sdk/gameui/multiplayeradvanceddialog.h
  sdk/gameui/optionsdialog.h
  sdk/gameui/optionssubaudio.h
  sdk/gameui/optionssubdifficulty.h
  sdk/gameui/optionssubgame.h
  sdk/gameui/optionssubkeyboard.h
  sdk/gameui/optionssubmouse.h
  sdk/gameui/optionssubmultiplayer.h
  sdk/gameui/optionssubportal.h
  sdk/gameui/optionssubvideo.h
  sdk/gameui/optionssubvoice.h
  sdk/gameui/panellistpanel.h
  sdk/gameui/playerlistdialog.h
  sdk/gameui/rungameengine.h
  sdk/gameui/scriptobject.h
  sdk/gameui/sdk/basemodframe.h
  sdk/gameui/sdk/basemodpanel.h
  sdk/gameui/sdk/basemodui.h
  sdk/gameui/sdk/gamemodes.h
  sdk/gameui/sdk/uiavatarimage.h
  sdk/gameui/sdk/uigamedata.h
  sdk/gameui/sdk/vachievements.h
  sdk/gameui/sdk/vaddonassociation.h
  sdk/gameui/sdk/vaddons.h
  sdk/gameui/sdk/vattractscreen.h
  sdk/gameui/sdk/vaudio.h
  sdk/gameui/sdk/vaudiovideo.h
  sdk/gameui/sdk/vcloud.h
  sdk/gameui/sdk/vcontrolleroptions.h
  sdk/gameui/sdk/vcontrolleroptionsbuttons.h
  sdk/gameui/sdk/vcontrolleroptionssticks.h
  sdk/gameui/sdk/vcustomcampaigns.h
  sdk/gameui/sdk/vdownloadcampaign.h
  sdk/gameui/sdk/vdownloads.h
  sdk/gameui/sdk/vdropdownmenu.h
  sdk/gameui/sdk/vflyoutmenu.h
  sdk/gameui/sdk/vfooterpanel.h
  sdk/gameui/sdk/vfoundgames.h
  sdk/gameui/sdk/vfoundgroupgames.h
  sdk/gameui/sdk/vfoundpublicgames.h
  sdk/gameui/sdk/vgamelobby.h
  sdk/gameui/sdk/vgamelobbychat.h
  sdk/gameui/sdk/vgameoptions.h
  sdk/gameui/sdk/vgamesettings.h
  sdk/gameui/sdk/vgenericconfirmation.h
  sdk/gameui/sdk/vgenericpanellist.h
  sdk/gameui/sdk/vgenericwaitscreen.h
  sdk/gameui/sdk/vgetlegacydata.h
  sdk/gameui/sdk/vhybridbutton.h
  sdk/gameui/sdk/vingamechapterselect.h
  sdk/gameui/sdk/vingamedifficultyselect.h
  sdk/gameui/sdk/vingamekickplayerlist.h
  sdk/gameui/sdk/vingamemainmenu.h
  sdk/gameui/sdk/vjukebox.h
  sdk/gameui/sdk/vkeyboard.h
  sdk/gameui/sdk/vkeyboardmouse.h
  sdk/gameui/sdk/vleaderboard.h
  sdk/gameui/sdk/vloadingprogress.h
  sdk/gameui/sdk/vmainmenu.h
  sdk/gameui/sdk/vmultiplayer.h
  sdk/gameui/sdk/voptions.h
  sdk/gameui/sdk/vpasswordentry.h
  sdk/gameui/sdk/vquickjoin.h
  sdk/gameui/sdk/vquickjoingroups.h
  sdk/gameui/sdk/vsignindialog.h
  sdk/gameui/sdk/vslidercontrol.h
  sdk/gameui/sdk/vspinnercontrol.h
  sdk/gameui/sdk/vsteamcloudconfirmation.h
  sdk/gameui/sdk/vtransitionscreen.h
  sdk/gameui/sdk/vvideo.h
  sdk/gameui/sdk/vvoteoptions.h
  sdk/gameui/sys_utils.h
  sdk/gameui/textentrybox.h
  sdk/gameui/urlbutton.h
  sdk/gameui/vcontrolslistpanel.h
  sdk/gameui/vguisystemmoduleloader.h
  sdk/sdk_input.h
  sdk/vgui/nb_button.h
  sdk/vgui/nb_header_footer.h
  sdk/vgui/nb_horiz_list.h
  sdk/vgui/nb_select_level_entry.h
  sdk/vgui/nb_select_level_panel.h
  sdk/vgui/sdk_hud_chat.h
  sdk/vgui/sdk_loading_panel.h
  sdk/vgui/sdk_logo_panel.h
  sdk/vgui/sdk_vgui_music_importer.h
  spatialentitymgr.h
  vgui_avatarimage.h
  viewdebug.h
  viewpostprocess.h
  vscript_client.h
  ../shared/vscript_shared.h
  game_controls/basemodel_panel.h
  hl2/c_basehelicopter.h
  mp3player.h
  ../../public/tools/bonelist.h
  toolframework_client.h
  animationlayer.h
  baseanimatedtextureproxy.h
  baseclientrendertargets.h
  beamdraw.h
  bone_merge_cache.h
  c_ai_basenpc.h
  c_baseanimating.h
  c_baseanimatingoverlay.h
  c_basecombatcharacter.h
  c_basecombatweapon.h
  c_basedoor.h
  c_baseentity.h
  c_baseflex.h
  c_baseplayer.h
  c_basetempentity.h
  c_baseviewmodel.h
  c_breakableprop.h
  c_effects.h
  c_entitydissolve.h
  c_entityflame.h
  c_entityfreezing.h
  c_env_fog_controller.h
  c_fire_smoke.h
  c_func_dust.h
  c_func_reflective_glass.h
  c_gib.h
  c_impact_effects.h
  c_movie_display.h
  c_physbox.h
  c_physicsprop.h
  c_pixel_visibility.h
  c_playerlocaldata.h
  c_playerresource.h
  c_point_camera.h
  c_prop_vehicle.h
  c_recipientfilter.h
  c_rope.h
  c_rumble.h
  c_sceneentity.h
  c_smoke_trail.h
  c_soundscape.h
  c_sprite.h
  c_sun.h
  c_surfacerender.h
  c_te_basebeam.h
  c_te_effect_dispatch.h
  c_te_legacytempents.h
  c_te_particlesystem.h
  c_team.h
  c_tesla.h
  c_tracer.h
  c_triggers.h
  c_user_message_register.h
  c_vehicle_jeep.h
  c_vguiscreen.h
  c_weapon__stubs.h
  c_world.h
  cbase.h
  cdll_client_int.h
  cdll_util.h
  cl_animevent.h
  cl_mat_stub.h
  client_factorylist.h
  client_thinklist.h
  clientalphaproperty.h
  cliententitylist.h
  clientleafsystem.h
  clientmode.h
  clientmode_shared.h
  clientsideeffects.h
  colorcorrectionmgr.h
  detailobjectsystem.h
  enginesprite.h
  flashlighteffect.h
  fontabc.h
  functionproxy.h
  fx.h
  fx_blood.h
  #cstrike/fx_cs_blood.h
  fx_discreetline.h
  fx_envelope.h
  fx_explosion.h
  fx_fleck.h
  fx_impact.h
  fx_interpvalue.h
  fx_line.h
  fx_quad.h
  fx_sparks.h
  fx_staticline.h
  fx_trail.h
  fx_water.h
  ../shared/GameEventListener.h
  glow_outline_effect.h
  glow_overlay.h
  ../shared/hintmessage.h
  ../shared/hintsystem.h
  history_resource.h
  hltvcamera.h
  hud.h
  hud_basechat.h
  hud_basetimer.h
  hud_bitmapnumericdisplay.h
  hud_chat.h
  hud_closecaption.h
  hud_crosshair.h
  hud_element_helper.h
  hud_lcd.h
  hud_macros.h
  hud_numericdisplay.h
  hud_pdump.h
  #cstrike/hud_radar.h
  hud_vehicle.h
  hudelement.h
  hudtexturehandle.h
  iclassmap.h
  icliententityinternal.h
  iclientmode.h
  iclientshadowmgr.h
  iclientvehicle.h
  iconsole.h
  idebugoverlaypanel.h
  ifpspanel.h
  ihudlcd.h
  iinput.h
  iloadingdisc.h
  imaterialproxydict.h
  imessagechars.h
  in_main.h
  inetgraphpanel.h
  initializer.h
  input.h
  ../../public/tier1/interpolatedvar.h
  iprofiling.h
  itextmessage.h
  ivieweffects.h
  iviewrender.h
  iviewrender_beams.h
  ivmodemanager.h
  kbutton.h
  keybindinglistener.h
  menu.h
  movehelper_client.h
  networkstringtable_clientdll.h
  object_motion_blur_effect.h
  panelmetaclassmgr.h
  particle_collision.h
  particle_iterators.h
  particle_litsmokeemitter.h
  particle_prototype.h
  particle_simple3d.h
  particle_util.h
  particledraw.h
  particlemgr.h
  particles_attractor.h
  particles_ez.h
  particles_localspace.h
  particles_new.h
  particles_simple.h
  particlesphererenderer.h
  perfvisualbenchmark.h
  physics.h
  physpropclientside.h
  playerandobjectenumerator.h
  playerenumerator.h
  prediction.h
  prediction_private.h
  proxyentity.h
  ragdoll.h
  ragdollexplosionenumerator.h
  recvproxy.h
  rendertexture.h
  replaycamera.h
  ScreenSpaceEffects.h
  simple_keys.h
  smoke_fog_overlay.h
  splinepatch.h
  ../../public/steam/steam_api.h
  TeamBitmapImage.h
  tempent.h
  text_message.h
  timedevent.h
  toggletextureproxy.h
  vgui_basepanel.h
  vgui_bindpanel.h
  vgui_bitmapbutton.h
  vgui_bitmapimage.h
  vgui_bitmappanel.h
  vgui_entityimagepanel.h
  vgui_entitypanel.h
  vgui_grid.h
  vgui_helpers.h
  vgui_hudvideo.h
  vgui_imagehealthpanel.h
  vgui_int.h
  vgui_video.h
  vguicenterprint.h
  view.h
  view_scene.h
  viewangleanim.h
  ViewConeImage.h
  viewrender.h
  weapon_selection.h
  weapons_resource.h
  ../../public/vgui_controls/AnimationController.h
  ../../public/basehandle.h
  ../../public/tier0/basetypes.h
  ../../public/tier1/bitbuf.h
  ../../public/bitvec.h
  ../../public/bone_accessor.h
  ../../public/bone_setup.h
  ../../public/bspfile.h
  ../../public/bspflags.h
  ../../public/bsptreedata.h
  ../../public/mathlib/bumpvects.h
  ../../public/vgui_controls/Button.h
  ../../public/cdll_int.h
  ../../public/tier1/characterset.h
  ../../public/tier1/checksum_md5.h
  ../../public/vgui_controls/CircularProgressBar.h
  ../../public/client_class.h
  ../../public/client_render_handle.h
  ../../public/client_textmessage.h
  ../../public/clientstats.h
  ../../public/closedcaptions.h
  ../../public/cmodel.h
  ../../public/vphysics/collision_set.h
  ../../public/collisionutils.h
  ../../public/Color.h
  ../../public/vgui_controls/ComboBox.h
  ../../public/tier0/commonmacros.h
  ../../public/mathlib/compressed_light_cube.h
  ../../public/mathlib/compressed_vector.h
  ../../public/con_nprint.h
  ../../public/const.h
  ../../public/vphysics/constraints.h
  ../../public/vgui_controls/Controls.h
  ../../public/tier1/convar.h
  ../../public/coordsize.h
  ../../public/crtmemdebug.h
  ../../public/vgui/Cursor.h
  ../../public/vgui/Dar.h
  ../../public/datamap.h
  ../../public/tier0/dbg.h
  ../../public/dlight.h
  ../../public/dt_common.h
  ../../public/dt_recv.h
  ../../public/dt_send.h
  ../../public/dt_utlvector_common.h
  ../../public/dt_utlvector_recv.h
  ../../public/edict.h
  ../../public/vgui_controls/EditablePanel.h
  ../../public/tier0/fasttimer.h
  ../../public/filesystem.h
  ../../public/filesystem_helpers.h
  ../../public/tier1/fmtstr.h
  ../../public/vgui_controls/FocusNavGroup.h
  ../../public/vphysics/friction.h
  ../../public/gamebspfile.h
  ../../public/gametrace.h
  ../../public/globalvars_base.h
  ../../public/vgui_controls/HTML.h
  ../../public/iachievementmgr.h
  ../../public/appframework/IAppSystem.h
  ../../public/iclientalphaproperty.h
  ../../public/icliententity.h
  ../../public/icliententitylist.h
  ../../public/engine/IClientLeafSystem.h
  ../../public/iclientnetworkable.h
  ../../public/vgui/IClientPanel.h
  ../../public/iclientrenderable.h
  ../../public/game/client/iclientrendertargets.h
  ../../public/iclientthinkable.h
  ../../public/iclientunknown.h
  ../../public/engine/ICollideable.h
  ../../public/tier0/icommandline.h
  ../../public/icvar.h
  ../../public/iefx.h
  ../../public/engine/IEngineSound.h
  ../../public/engine/IEngineTrace.h
  ../../public/ienginevgui.h
  ../../public/igameevents.h
  ../../public/igameresources.h
  ../../public/IGameUIFuncs.h
  ../../public/ihandleentity.h
  ../../public/vgui/IHTML.h
  ../../public/vgui/IImage.h
  ../../public/vgui/IInput.h
  ../../public/vgui/IInputInternal.h
  ../../public/vstdlib/IKeyValuesSystem.h
  ../../public/vgui/ILocalize.h
  ../../public/vgui_controls/Image.h
  ../../public/vgui_controls/ImageList.h
  ../../public/vgui_controls/ImagePanel.h
  ../../public/imapoverview.h
  ../../public/materialsystem/imaterial.h
  ../../public/materialsystem/imaterialproxy.h
  ../../public/materialsystem/imaterialsystem.h
  ../../public/materialsystem/imaterialsystemhardwareconfig.h
  ../../public/materialsystem/imaterialsystemstub.h
  ../../public/materialsystem/imaterialvar.h
  ../../public/VGuiMatSurface/IMatSystemSurface.h
  ../../public/materialsystem/imesh.h
  ../../public/inetchannelinfo.h
  ../../public/tier1/interface.h
  ../../public/interpolatortypes.h
  ../../public/tier2/interval.h
  ../../public/vgui/IPanel.h
  ../../public/iprediction.h
  ../../public/irecipientfilter.h
  ../../public/isaverestore.h
  ../../public/vgui/IScheme.h
  ../../public/iscratchpad3d.h
  ../../public/iserverentity.h
  ../../public/iservernetworkable.h
  ../../public/iserverunknown.h
  ../../public/engine/ishadowmgr.h
  ../../public/SoundEmitterSystem/isoundemittersystembase.h
  ../../public/ispatialpartition.h
  ../../public/engine/IStaticPropMgr.h
  ../../public/istudiorender.h
  ../../public/vgui/ISurface.h
  ../../public/vgui/ISystem.h
  ../../public/materialsystem/itexture.h
  ../../public/engine/ivdebugoverlay.h
  ../../public/vgui/IVGui.h
  ../../public/game/client/iviewport.h
  ../../public/engine/ivmodelinfo.h
  ../../public/engine/ivmodelrender.h
  ../../public/ivrenderview.h
  ../../public/jigglebones.h
  ../../public/vgui/KeyCode.h
  ../../public/tier1/KeyValues.h
  ../../public/tier0/l2cache.h
  ../../public/vgui_controls/Label.h
  ../../public/tier1/lerp_functions.h
  ../../public/vgui_controls/ListPanel.h
  ../../public/mathlib/mathlib.h
  ../../public/tier0/mem.h
  ../../public/tier0/memalloc.h
  ../../public/tier0/memdbgoff.h
  ../../public/tier0/memdbgon.h
  ../../public/tier1/mempool.h
  ../../public/vgui_controls/Menu.h
  ../../public/vgui_controls/MenuItem.h
  ../../public/vgui_controls/MessageMap.h
  ../../public/model_types.h
  ../../public/vgui/MouseCode.h
  ../../public/mouthinfo.h
  ../../public/networkstringtabledefs.h
  ../../public/networkvar.h
  ../../public/vphysics/object_hash.h
  ../../public/overlaytext.h
  ../../public/vgui_controls/Panel.h
  ../../public/vgui_controls/PanelAnimationVar.h
  ../../public/vgui_controls/PanelListPanel.h
  ../../public/vgui_controls/PHandle.h
  ../../public/pixelwriter.h
  ../../public/tier0/platform.h
  ../../public/PlayerState.h
  ../../public/mathlib/polyhedron.h
  ../../public/tier1/processor_detect.h
  ../../public/tier0/protected_things.h
  ../../public/r_efx.h
  ../../public/vstdlib/random.h
  ../../public/tier1/rangecheckedvar.h
  ../../public/vgui_controls/RichText.h
  ../../public/rope_physics.h
  ../../public/rope_shared.h
  ../../public/saverestoretypes.h
  ../../public/scratchpad3d.h
  ../../public/ScratchPadUtils.h
  ../../public/vgui_controls/ScrollBar.h
  ../../public/vgui_controls/SectionedListPanel.h
  ../../public/sentence.h
  ../../public/server_class.h
  ../../public/shake.h
  ../../public/shattersurfacetypes.h
  ../../public/simple_physics.h
  ../../public/tier1/smartptr.h
  ../../public/soundchars.h
  ../../public/soundflags.h
  ../../public/soundinfo.h
  ../../public/string_t.h
  ../../public/tier1/stringpool.h
  ../../public/stringregistry.h
  ../../public/tier1/strtools.h
  ../../public/studio.h
  ../../public/surfinfo.h
  ../../public/vgui_controls/TextEntry.h
  ../../public/vgui_controls/TextImage.h
  ../../public/texture_group_names.h
  ../../public/vgui_controls/TreeView.h
  ../../public/tier1/utlbidirectionalset.h
  ../../public/tier1/utlbuffer.h
  ../../public/tier1/utldict.h
  ../../public/tier1/utlfixedmemory.h
  ../../public/tier1/utlhash.h
  ../../public/tier1/utllinkedlist.h
  ../../public/tier1/utlmap.h
  ../../public/tier1/utlmemory.h
  ../../public/tier1/utlmultilist.h
  ../../public/tier1/utlpriorityqueue.h
  ../../public/tier1/utlqueue.h
  ../../public/tier1/utlrbtree.h
  ../../public/tier1/utlstack.h
  ../../public/tier1/utlsymbol.h
  ../../public/tier1/utlvector.h
  ../../public/vallocator.h
  ../../public/vcollide.h
  ../../public/vcollide_parse.h
  ../../public/mathlib/vector.h
  ../../public/mathlib/vector2d.h
  ../../public/mathlib/vector4d.h
  ../../public/vgui/VGUI.h
  ../../public/view_shared.h
  ../../public/mathlib/vmatrix.h
  ../../public/vphysics_interface.h
  ../../public/mathlib/vplane.h
  ../../public/tier0/vprof.h
  ../../public/vstdlib/vstdlib.h
  ../../public/vtf/vtf.h
  ../../public/vgui_controls/WizardPanel.h
  ../../public/vgui_controls/WizardSubPanel.h
  ../../public/worldsize.h
  ../../public/zip_uncompressed.h
  ../shared/activitylist.h
  ../shared/ai_activity.h
  ../shared/ai_debug_shared.h
  ../shared/ammodef.h
  ../shared/animation.h
  ../shared/apparent_velocity_helper.h
  ../shared/base_playeranimstate.h
  #../shared/cstrike/basecsgrenade_projectile.h
  ../shared/baseentity_shared.h
  ../shared/basegrenade_shared.h
  ../shared/hl2/basehlcombatweapon_shared.h
  ../shared/baseparticleentity.h
  ../shared/baseplayer_shared.h
  ../shared/baseviewmodel_shared.h
  ../shared/beam_flags.h
  ../shared/beam_shared.h
  ../shared/cellcoord.h
  ../shared/choreoactor.h
  ../shared/choreochannel.h
  ../shared/choreoevent.h
  ../shared/choreoscene.h
  ../shared/collisionproperty.h
  ../shared/death_pose.h
  ../shared/decals.h
  ../shared/effect_color_tables.h
  ../shared/effect_dispatch_data.h
  ../shared/ehandle.h
  ../shared/entitydatainstantiator.h
  ../shared/entitylist_base.h
  ../shared/entityparticletrail_shared.h
  ../shared/env_detail_controller.h
  ../shared/env_wind_shared.h
  ../shared/eventlist.h
  ../shared/func_dust_shared.h
  ../shared/func_ladder.h
  #../shared/cstrike/fx_cs_shared.h
  ../shared/gameeventdefs.h
  ../shared/gamemovement.h
  ../shared/gamerules.h
  ../shared/gamerules_register.h
  ../shared/GameStats.h
  ../shared/gamestringpool.h
  ../shared/gamevars_shared.h
  ../shared/groundlink.h
  ../shared/hl2/hl2_player_shared.h
  ../shared/hl2/hl_movedata.h
  ../shared/ichoreoeventcallback.h
  ../shared/IEffects.h
  ../shared/igamemovement.h
  ../shared/igamesystem.h
  ../shared/imovehelper.h
  ../shared/in_buttons.h
  ../shared/iplayeranimstate.h
  ../shared/ipredictionsystem.h
  ../shared/itempents.h
  ../shared/IVehicle.h
  ../shared/mapdata_shared.h
  ../shared/mapentities_shared.h
  ../shared/movevars_shared.h
  ../shared/mp_shareddefs.h
  ../shared/multiplay_gamerules.h
  ../shared/npcevent.h
  ../shared/obstacle_pushaway.h
  ../shared/physics_saverestore.h
  ../shared/physics_shared.h
  ../shared/playernet_vars.h
  ../shared/point_posecontroller.h
  ../shared/positionwatcher.h
  ../shared/precache_register.h
  ../shared/precipitation_shared.h
  ../shared/predictable_entity.h
  ../shared/predictableid.h
  ../shared/predictioncopy.h
  ../shared/ragdoll_shared.h
  ../../public/responserules/response_types.h
  ../shared/rope_helpers.h
  ../shared/saverestore.h
  ../shared/saverestore_bitstring.h
  ../shared/saverestore_utlclass.h
  ../shared/saverestore_utlsymbol.h
  ../shared/saverestore_utlvector.h
  ../shared/sceneentity_shared.h
  ../shared/scriptevent.h
  ../shared/sequence_Transitioner.h
  ../shared/shared_classnames.h
  ../shared/shareddefs.h
  ../shared/sharedInterface.h
  ../shared/sheetsimulator.h
  ../shared/shot_manipulator.h
  ../shared/simtimer.h
  ../shared/singleplay_gamerules.h
  ../shared/solidsetdefaults.h
  ../shared/soundenvelope.h
  ../shared/Sprite.h
  ../shared/SpriteTrail.h
  ../shared/steamworks_gamestats.h
  ../shared/sun_shared.h
  ../shared/takedamageinfo.h
  ../shared/teamplay_gamerules.h
  ../shared/teamplayroundbased_gamerules.h
  ../shared/tempentity.h
  ../shared/touchlink.h
  ../shared/usercmd.h
  ../shared/usermessages.h
  ../shared/util_shared.h
  ../shared/vehicle_choreo_generic_shared.h
  ../shared/vehicle_viewblend_shared.h
  ../shared/vgui_defaultinputsignal.h
  ../shared/viewport_panel_names.h
  ../shared/voice_banmgr.h
  ../shared/voice_common.h
  ../shared/voice_gamemgr.h
  ../shared/voice_status.h
  ../shared/vphysics_sound.h
  #../shared/cstrike/weapon_flashbang.h
  #../shared/cstrike/weapon_hegrenade.h
  #../shared/weapon_ifmsteadycam.h
  ../shared/weapon_parse.h
  ../shared/weapon_proficiency.h
  game_controls/baseviewport.h
  game_controls/clientscoreboarddialog.h
  game_controls/commandmenu.h
  game_controls/IconPanel.h
  game_controls/imagemouseoverbutton.h
  game_controls/intromenu.h
  game_controls/mapoverview.h
  game_controls/mouseoverhtmlbutton.h
  game_controls/mouseoverpanelbutton.h
  game_controls/NavProgress.h
  game_controls/spectatorgui.h
  game_controls/teammenu.h
  game_controls/vguitextwindow.h
)

# header directories
include_directories(
  ./hl2
  ./sdk
  ./sdk/vgui
  ../statemachine
  ../../game/shared/multiplayer
  ../../game/shared/sdk
  ../../common
  ../../public
  ../../public/tier0
  ../../public/tier1
  ../../game/shared
  ./game_controls
  ../../game/client/sdk/gameui
)

# link directories
link_directories(
  ../../lib/common
  ../../lib/public
)

# link libraries
link_libraries(
  winmm.lib
  ../../lib/public/bitmap.lib
  ../../lib/public/bonesetup.lib
  ../../lib/public/choreoobjects.lib
  ../../lib/public/dmxloader.lib
  ../../lib/public/interfaces.lib
  ../../lib/common/jpeglib.lib
  ../../lib/public/mathlib.lib
  ../../lib/public/matsys_controls.lib
  ../../lib/public/npsclient.lib
  ../../lib/public/particles.lib
  ../../lib/public/raytrace.lib
  ../../lib/public/responserules_runtime.lib
  ../../lib/public/steam_api.lib
  ../../lib/public/tier0.lib
  ../../lib/public/tier1.lib
  ../../lib/public/tier2.lib
  ../../lib/public/tier3.lib
  ../../lib/public/vgui_controls.lib
  ../../lib/public/videocfg.lib
  ../../lib/public/vpklib.lib
  ../../lib/public/vstdlib.lib
  ../../lib/public/vtf.lib
)

add_library(swarm_skeleton_client SHARED ${SOURCE_FILES} ${HEADER_FILES})

# Target compiler and platform (assuming Visual Studio)
target_compile_features(swarm_skeleton_client PRIVATE)

# Add preprocessor definitions
set(PREPROCESSOR_DEFINITIONS WIN32;_WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;DLLNAME=client;VPCGAME=swarm;VPCGAMECAPS=SWARM;_DLL_EXT=.dll;COMPILER_MSVC32;COMPILER_MSVC;MEMOVERRIDE_MODULE=client;NO_STRING_T;CLIENT_DLL;VECTOR;VERSION_SAFE_STEAM_API_INTERFACES;PROTECTED_THINGS_ENABLE;strncpy=use_Q_strncpy_instead;_snprintf=use_Q_snprintf_instead;ENABLE_HTMLWINDOW;fopen=dont_use_fopen;SDK_CLIENT_DLL;SDK_DLL;SPLIT_SCREEN_STUBS;GAMEUI_EMBEDDED;GAMEUI_EXPORTS;DEFERRED_DEV)
add_compile_definitions(${PREPROCESSOR_DEFINITIONS})

# Optional: Set output directory for the library
set_target_properties(swarm_skeleton_client PROPERTIES OUTPUT_DIRECTORY client.dll)
